Added ONLY Csound 5 versions of lorisgens files, and a skeletal README and Makefile.win for Dev-C++.

--- a/Opcodes/Loris/README
+++ b/Opcodes/Loris/README
@@ -1,3 +1,27 @@
+MICHAEL GOGINS FOR CSOUND 5
+23 July 2004
+
+For more information about Loris, please see http://
+
+I have modified the two lorisgens.h and lorisgens.C files to build and run 
+with csound5, and I have placed a prebuilt _loris.dll in the csound5
+directory. This is a Dev-C++ (MinGW) build for Windows with USE_DOUBLE
+defined.
+
+_loris.dll is a Csound plugin opcode, and it is also a Python extension 
+module (along with loris.py, also committed in csound5 along with the 
+morphdemo.py demonstration, though to run it you will need source files 
+from Loris CVS on SourceForge).
+
+The Dev-C++ project file has also been committed. You could adapt this
+project file to build Loris without USE_DOUBLE, or to find out how to 
+modify the Loris build system to build for csound 5 on Linux or other platforms.
+Note that sources, libraries, and headers will all likely be in different 
+places on your system.
+
+
+KELLY FITZ FOR CSOUND 4
+
 This document outlines the steps necessary to add Loris unit generators
 to Csound. You will need, in addition to Loris and the libraries on
 which it depends (FFTW), a copy of the Csound source code, available at, 
