Removed autogenerated files.

--- a/Opcodes/py/README
+++ b/Opcodes/py/README
@@ -1,12 +1,12 @@
 PYTHON OPCODES FOR CSOUND
 By Maurizio Umberto Puxeddu
 Modified by Michael Gogins for Csound 5
+2004 July 24
 
 
 BEFORE COMPILING
 
-To generate the source code for the py-opcodes
-just run the 
+To generate the source code for the Python opcodes just run the 
 
 pycall-gen.py
 
@@ -19,5 +19,15 @@ scripts in this directory.
 
 NOTES
 
-The {{ and }} directives for mutiple-line strings are not implemented in 
-Csound 5, so many of the examples will not run without editing.
+Currently, these opcodes only function in CsoundVST because they require 
+the Python virtual machine to be initialized, which CsoundVST takes care of.
+
+If you write your composition as a Python script in CsoundVST, you can write 
+classes for your composition in that script and embed your Csound orchestras 
+and scores in the script using Python triple quotes ('''). Therefore, the 
+{{ and }} directives are not necessary if you use CsoundVST.
+
+The {{ and }} directives for mutiple-line strings are not currently 
+implemented in Csound 5.
+
+
