--- a/csound.tex
+++ b/csound.tex
@@ -562,10 +562,7 @@ This is a ``to do'' list, not necessarily complete, and in no particular order o
 
 \begin{enumerate}
 \item See also the \texttt{To-fix-and-do} file in the \texttt{csound5} directory.
-\item Get the ASIO version of PortAudio working on Windows, or write a kernel streaming PortAudio driver, for latency adequate to real-time performance.
-\item Create a Pure Data (PD) adapter opcode that will run Pure Data (PD) patches in Csound orchestra, for both MIDI and audio input and output.
-\item Create a \emph{Mathematica} interface for CsoundVST.
-\item Create a COM interface for CsoundVST.
+\item Get the ASIO version of PortAudio working on Windows.
 \item Create better examples, especially to demonstrate the use of Python and of VST plugins. One example should be a live performance instrument with a Python GUI that controls instrument parameters or algorithmic composition parameters in real time.
 \item Complete the work of making Csound multi-instantiable.
 \item All Csound documentation in this one PDF.
